design login template

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
     <link
       rel="stylesheet"
@@ -11,60 +11,77 @@
       integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
       crossorigin="anonymous"
     />
-    <link  rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     />
-</head>
-<body>
-    
+  </head>
+  <body>
     <section>
-        <div class="container">
-            <div class="row sign-up-section">
-                <div class="col-md-5 left-side-content">
-                    <img src="/logo.png" width="20%" alt="logo-img">
-                   <h6> Find 3D Object, Mockups and Illustration here.</h6>
-                   <img src="/banner.png" width="100%">
+      <div class="container">
+        <div class="row sign-up-section">
+          <div class="col-md-5 left-side-content">
+            <img src="/logo.png" width="20%" alt="logo-img" />
+            <h6>Find 3D Object, Mockups and Illustration here.</h6>
+            <img src="/banner.png" width="100%" />
+          </div>
+          <div
+            class="col-md-7"
+            style="background-color: #fff; border-radius: 10px 0px 0px 10px"
+          >
+            <div class="right-side-content">
+              <div class="language">
+                <h6>English (UK) <i class="fa fa-angle-down"></i></h6>
+              </div>
+              <div class="Create-acc">
+                <h4>Create Account</h4>
+              </div>
+              <div class="sign-up-with">
+                <div class="with-google">
+                  <img src="/google.png" width="8%" />&nbsp;&nbsp;Sign Up with
+                  Google
                 </div>
-                <div class="col-md-7" style="background-color: #fff; border-radius: 10px 0px 0px 10px">
-                    <div class="right-side-content">
-                    <div class="language">
-                        <h6>English (UK) <i class="fa fa-angle-down"></i></h6>
-                    </div>
-                    <div class="Create-acc">
-                        <h4>Create Account</h4>
-                    </div>
-                    <div class="sign-up-with">
-                        <div class="with-google"><img src="/google.png" width="8%">&nbsp;&nbsp;Sign Up with Google</div>
-                        <div class="with-google"><img src="/facebook.png" width="15%"> Sign Up with Facebook</div>
-                    </div>
-                    <div class="or-cls">
-                     <h6>-OR-</h6>
-                    </div>
-                    <div class="">
-                    <div class="mt-3">
-                        <input class="form-control input-classes" type="text" placeholder="Full Name"/> 
-                    </div>
-                    <div class="mt-4">
-                        <input class="form-control input-classes" type="text" placeholder="Email Address"/> 
-                    </div>
-                    <div class="mt-4">
-                        <input class="form-control input-classes" type="text" placeholder="Password"/> 
-                    </div>
-                    <div class="create-btn">
-                        <button class="btn">Create Account</button>
-                    </div>
-                    <div class="last-line">            
-                                <p>Already have an account? <span >Login</span></p>
-                            </div>
+                <div class="with-google">
+                  <img src="/facebook.png" width="15%" /> Sign Up with Facebook
                 </div>
+              </div>
+              <div class="or-cls">
+                <h6>-OR-</h6>
+              </div>
+              <div class="">
+                <div class="mt-3">
+                  <input
+                    class="form-control input-classes"
+                    type="text"
+                    placeholder="Full Name"
+                  />
                 </div>
+                <div class="mt-4">
+                  <input
+                    class="form-control input-classes"
+                    type="text"
+                    placeholder="Email Address"
+                  />
+                </div>
+                <div class="mt-4">
+                  <input
+                    class="form-control input-classes"
+                    type="text"
+                    placeholder="Password"
+                  />
+                </div>
+                <div class="create-btn">
+                  <button class="btn">Create Account</button>
+                </div>
+                <div class="last-line">
+                  <p>Already have an account? <span>Login</span></p>
+                </div>
+              </div>
             </div>
-
-            </div>
+          </div>
         </div>
+      </div>
     </section>
-    
-</body>
+  </body>
 </html>
