fix some major issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section>
       <div class="container">
         <div class="row sign-up-section">
-          <div class="col-md-5 left-side-content">
+          <div class="col-md-5 d-none-sm left-side-content">
             <img src="/logo.png" width="20%" alt="logo-img" />
             <h6>Find 3D Object, Mockups and Illustration here.</h6>
             <img src="/banner.png" width="100%" />
@@ -38,11 +38,11 @@
                 <h4>Create Account</h4>
               </div>
               <div class="sign-up-with">
-                <div class="with-google">
+                <div class="with-google google-fix">
                   <img src="/google.png" width="8%" />&nbsp;&nbsp;Sign Up with
                   Google
                 </div>
-                <div class="with-google">
+                <div class="with-google facebook-fix">
                   <img src="/facebook.png" width="15%" /> Sign Up with Facebook
                 </div>
               </div>
